Fixed spacing inconsistency in sidenav

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,4 +38,5 @@ mat-sidenav-content {
 }
 mat-nav-list a mat-icon, mat-nav-list a img {
   margin-right: 1em;
+  font-size: 24px;
 }
